Slimmer right padding on text blocks to prevent some line wraps

--- a/main.css
+++ b/main.css
@@ -114,6 +114,7 @@ main
 {
     flex: 1;
     padding: 14px;
+    padding-right: 8px;
     background: #080114;
 
     border-style: double;
